syntax = "proto3";

option csharp_namespace = "TimeServerClient";

package timeservice;

service TimeService {
  rpc GetCurrentTime (TimeRequest) returns (TimeResponse);

  // Authenticated method to query the database for time retrieval calls
  rpc QueryTimeDatabase (Certificate) returns (QueryResponse);
}

message TimeRequest {
}

message TimeResponse {
  string current_time = 1;
}

// Authentication
message Certificate {
    string certificate_data = 1;
}

message QueryRequest {
}

message QueryResponse {
    repeated string time_logs = 1;
}

